--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "ireckonu",
   "version": "0.0.0",
+  "author": "morteza aghilinasab",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -11,11 +12,13 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~8.1.1",
+    "@angular/animations": "^8.1.3",
+    "@angular/cdk": "^8.1.2",
     "@angular/common": "~8.1.1",
     "@angular/compiler": "~8.1.1",
     "@angular/core": "~8.1.1",
     "@angular/forms": "~8.1.1",
+    "@angular/material": "^8.1.2",
     "@angular/platform-browser": "~8.1.1",
     "@angular/platform-browser-dynamic": "~8.1.1",
     "@angular/router": "~8.1.1",
